--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^1.4.2",
     "reflect-metadata": "^0.1.10",
     "sequelize": "^4.11.1",
+    "sequelize-cli": "^3.0.0",
     "sequelize-typescript": "^0.5.0"
   },
   "devDependencies": {
