add user table migration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,25 @@
+NODE_ENV=test
+
 PORT=3000
 
 #database
-DB_NAME=name
-DB_USER_NAME=username
-DB_PASSWORD=password
+TEST_DB_USERNAME=user
+TEST_DB_PASSWORD=password
+TEST_DB_NAME=db
+TEST_DB_HOSTNAME=localhost
+TEST_DB_RDBMS=mysql
+TEST_DB_MIGRATIONS_TABLE=migrations
+
+DEV_DB_USERNAME=user
+DEV_DB_PASSWORD=password
+DEV_DB_NAME=db
+DEV_DB_HOSTNAME=localhost
+DEV_DB_RDBMS=mysql
+DEV_DB_MIGRATIONS_TABLE=migrations
+
+PROD_DB_USERNAME=user
+PROD_DB_PASSWORD=password
+PROD_DB_NAME=db
+PROD_DB_HOSTNAME=localhost
+PROD_DB_RDBMS=mysql
+PROD_DB_MIGRATIONS_TABLE=migrations
