--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon --watch dist dist/server.js",
     "build": "tsc",
+    "sequelize": "node_modules/.bin/sequelize",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
