--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,6 +3,6 @@ const path = require('path');
 module.exports = {
   'config': path.resolve('dist/config', 'database.config.js'),
   'models-path': path.resolve('dist/database', 'models'),
-  'seeders-path': path.resolve('dist/database', 'seeders'),
+  'seeders-path': path.resolve('dist/database', 'seeds'),
   'migrations-path': path.resolve('dist/database', 'migrations'),
 }
