--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "express": "^4.15.5",
-    "mysql2": "^1.4.2",
+    "express": "^4.16.2",
+    "mysql2": "^1.5.0",
     "reflect-metadata": "^0.1.10",
-    "sequelize": "^4.11.1",
+    "sequelize": "^4.22.6",
     "sequelize-cli": "^3.0.0",
-    "sequelize-typescript": "^0.5.0"
+    "sequelize-typescript": "^0.5.0",
+    "validator.ts": "^0.2.2"
   },
   "devDependencies": {
     "prettier": "1.7.2"
